--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta name="keywords" content="GSD, Calculator, 地面采样距离, 地面分辨率" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title>地面采样距离(GSD)计算器</title>
   </head>
