--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
     <title>地面采样距离(GSD)计算器</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div class="jt-gsd-container">
+      <div id="app"></div>
+    </div>
   </body>
 </html>
